<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myName"
        android:textAlignment="center"
        style="@style/myStyle" />

    <EditText
        android:id="@+id/nickname_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickname_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnDone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_btn_done"
        app:backgroundTint="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/nickname_text"
        style="@style/myStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/text_star" />

    <ScrollView
        style="@style/myStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/myStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio" />
    </ScrollView>

</LinearLayout>